Update packs Update module.json to use esmodules and include packs Add additional localization Add slugify to compendium name Get top level url dynamically and read module.json for all relevant data Move registering of settings to macroAPIloaded in case module get's loaded after token attacher Fetch everything using topLevelUrl Update readme to reflect the changes

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,4 +1,6 @@
 {
 	"TOKENATTACHEREXAMPLECOMPENDIUM.ImportCompendiums": "Would you like to import the modules compendiums into your world?",
-	"TOKENATTACHEREXAMPLECOMPENDIUM.UpdateModule": "<p>The module has been updated.</p><p>Would you like to import the modules compendiums into your world?</p><p><i class='fas fa-exclamation-triangle'></i> This will delete the previous compendiums generated from this module!</p>"
+	"TOKENATTACHEREXAMPLECOMPENDIUM.UpdateModule": "<p>The module has been updated.</p><p>Would you like to import the modules compendiums into your world?</p><p><i class='fas fa-exclamation-triangle'></i> This will delete the previous compendiums generated from this module!</p>",
+	"TOKENATTACHEREXAMPLECOMPENDIUM.DeleteOld": "Delete old compendiums and refresh the page wtih F5!",
+	"TOKENATTACHEREXAMPLECOMPENDIUM.Refresh": "Refresh the page wtih F5!"
 }
